--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,13 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-auth</artifactId>
-			<version>2.7.1.2.4.2.12-1</version>
+			<version>2.7.3</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-core -->
+
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>2.6.0-mr1-cdh5.4.2.1</version>
+			<artifactId>hadoop-common</artifactId>
+			<version>2.7.3</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
@@ -42,10 +42,19 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.typesafe</groupId>
 			<artifactId>config</artifactId>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>13.0-rc1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -154,25 +163,6 @@
 		</plugins>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>hdp.releases.repo</id>
-			<name>HDP Releases Repository</name>
-			<url>http://repo.hortonworks.com/content/repositories/releases/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>spring.releases.repo</id>
-			<name>Spring Releases Repository</name>
-			<url>http://repo.spring.io/plugins-release/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-
-	</repositories>
 
 	<dependencyManagement>
 		<dependencies>
